old/manifests/acme-fitness/acme-fitness-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: acmefit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: acme-fitness-tls
    hosts:
    - change
  rules:
  - host: change
    http:
      paths:
      - backend:
          serviceName: shopping
          servicePort: 3000
